# rag-quiz

./: .gitignore  README.md  architecture.excalidraw  concepts.txt  docker-compose.yaml  pyproject.toml
.devcontainer/: Dockerfile.dev  devcontainer.json  post_create_commands.sh
backend/: add.py  app.py  connections.py  crud.py  load_env_config.py  logging_config.py  main.py  manual_db.ipynb  models.py  qa.py  test_base.py
backend/llm_interface/: InterfaceCreateQA.py  InterfaceJudgeResponse.py
backend/manual_sql_processes/: add_concepts.ipynb  add_question_and_answers.ipynb  concepts.txt  manual_db.ipynb  updating_prompts.ipynb
backend/migrations/: env.py
backend/migrations/versions/: 7fc4080dd744_init.py  822d89321fa5_prompt_versioing.py  85f7856996db_init.py  86b25b601ccf_init.py  9914aaad2d48_added_user_rating.py  f526606c4f89_time_taken_in_review.py
backend/tests/: conftest.py  test_crud.py
docs/: ideas.md  logbook.md  todo.md
frontend/: babel.config.json  package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend/src/: App.tsx  api.ts  constants.ts  index.js
notebooks/: add_qa.ipynb  check_dbs.ipynb  example.ipynb
static/: index.html
static/frontend/: main.js  main.js.LICENSE.txt
